<resources>
    <string name="app_name">Dev Straem Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_icon">profile_icon</string>
    <string name="_2255_4595_9874_4423">2255 4595 9874 4423</string>
    <string name="internet_n_recharge">Internet \n Recharge</string>
    <string name="cable_bill">Cable Bill</string>
    <string name="img">Img</string>
    <string name="_399_m">$399/M</string>
    <string name="model_x">Model X</string>
    <string name="next">NEXT</string>
    <string name="_5th_oct">5th Oct</string>
    <string name="_48_60">48/60</string>
    <string name="hey_george">✌️ Hey George!</string>
    <string name="visa">Visa</string>
    <string name="todo">TODO</string>
    <string name="_5_001_86">$5,001.86</string>
    <string name="_3854">**** 3854</string>
    <string name="due_date_10th_oct">@string/due_date_10th_oct</string>
    <string name="pay">PAY</string>
    <string name="bill_payments">Bill Payments</string>
    <string name="electricity_bill">Electricity Bill</string>
    <string name="active_loans">Active Loans</string>
    <string name="see_all">See All</string>
    <string name="_1w">1W</string>
    <string name="_1m">1M</string>
    <string name="_3m">3M</string>
    <string name="_6m">6M</string>
    <string name="_1y">1Y</string>
    <string name="all">ALL</string>
    <string name="total_spendings">Total Spendings</string>
    <string name="pay_early">PAY EARLY</string>
    <string name="recent_products">Recent Products</string>
    <string name="wallet">Wallet</string>
</resources>