<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.maruf.devstream.ui.viewmodel.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

        <!-- AppBar with Toolbar -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:background="@color/backgroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_back"
                app:title="Search"
                app:titleTextAppearance="@style/ToolbarTitleText"
                app:titleTextColor="@color/black" />

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Time Period Selector -->
        <LinearLayout
            android:id="@+id/timePeriodSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/appBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp">

            <!-- Time Period Buttons -->
            <TextView
                android:id="@+id/button1W"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1w"
                android:paddingVertical="7dp"
                android:paddingHorizontal="12dp"
                android:background="@drawable/time_period_shape"
                android:textColor="@color/white"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:id="@+id/button1M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1m"
                android:paddingVertical="7dp"
                android:paddingHorizontal="12dp"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/button3M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3m"
                android:paddingVertical="7dp"
                android:paddingHorizontal="12dp"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/button6M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6m"
                android:paddingVertical="7dp"
                android:paddingHorizontal="12dp"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/button1Y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1y"
                android:paddingVertical="7dp"
                android:paddingHorizontal="12dp"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/buttonALL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:paddingVertical="7dp"
                android:paddingHorizontal="12dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"/>
        </LinearLayout>

        <!-- Line Chart Placeholder -->
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/timePeriodSelector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Spending Summary Card -->
        <RelativeLayout
            android:id="@+id/spendingSummaryCard"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:background="@drawable/summary_card_background"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/lineChart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/total_spendings"
                    android:textColor="@color/gray"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/_5_001_86"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="1dp"
                android:fontFamily="sans-serif"
                android:text="@string/due_date_10th_oct"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:backgroundTint="@color/primaryColor"
                android:fontFamily="sans-serif-medium"
                android:text="@string/pay_early"
                android:textColor="@color/white" />
        </RelativeLayout>

        <!-- Recent Products Section -->
        <TextView
            android:id="@+id/recentProductsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_products"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/spendingSummaryCard"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- RecyclerView for Recent Products -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recentProductsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="65dp"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recentProductsTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
